--- a/Lab2/html/sign-in.html
+++ b/Lab2/html/sign-in.html
@@ -10,27 +10,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/registration.css">
     <link rel="shortcut icon" href="../resources/favicon.ico"/>
+    <script defer src="../scripts\sign-in.js"></script>
 </head>
 <body>
 <main>
     <div class="circle"></div>
     <div class="register-form-container">
-        <div class="logo-container">
-            <img class="logo-img" src="../resources/logo.png" alt="Logo">
+        <div id="header-sign-in-container">
+            <div class="logo-container">
+                <img class="logo-img" src="../resources/logo.png" alt="Logo">
+            </div>
+            <h1 class="form-title" id="sign-in-title">
+                Sing In
+            </h1>
         </div>
-        <h1 class="form-title">
-            Sing In
-        </h1>
-        <div class="form-fields">
+        <div class="form-fields" id="sing-in-form-fields">
             <div class="form-field">
-                <input type="email" placeholder="Email">
+                <input type="email" placeholder="Email" id="sing-in-login">
             </div>
             <div class="form-field">
-                <input type="text" placeholder="Password">
+                <input type="password" placeholder="Password" id="sing-in-password">
             </div>
         </div>
         <div class="form-buttons">
-            <a href="index.html" class="button">Let's make arts</a>
+            <a class="button" id="sing-in-button">Let's make arts</a>
             <div class="divider">or</div>
             <a href="registration.html" class="button">I don't have account</a>
         </div>
